<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvCarModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Car Model: Tesla" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCarModel">

        <ImageView
            android:id="@+id/ivRedLight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:alpha="0.3"
            android:contentDescription="@string/red_light_desc"
            android:src="@drawable/circle_red" />

        <ImageView
            android:id="@+id/ivOrangeLight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:alpha="0.3"
            android:contentDescription="@string/orange_light_desc"
            android:src="@drawable/circle_orange" />

        <ImageView
            android:id="@+id/ivGreenLight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:alpha="0.3"
            android:contentDescription="@string/green_light_desc"
            android:src="@drawable/circle_green" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout> 